<resources>
    <string name="app_name">lab1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button">Hello</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="button_linear2">Button</string>
    <string name="textview_linear2">TextView</string>
    <string name="textview_constraint1">TextView</string>
    <string name="button_constraint1">Button</string>
    <string name="button_constraint2">Button</string>
    <string name="textview_constraint2">TextView</string>
    <string name="con3_6">6</string>
    <string name="con3_2">2</string>
    <string name="con1_1">1</string>
    <string name="con3_4">4</string>
    <string name="con3_3">3</string>
    <string name="con3_5">5</string>
    <string name="con3_1">1</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_6">6</string>
    <string name="example">example</string>
</resources>