<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="1000dp"
    android:layout_height="1000dp">

    <Button
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="#673AB7"
        android:gravity="center"
        android:text="@string/_1"
        android:textColor="#000000"
        android:textSize="50sp"

        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="#D1C4E9"
        android:gravity="center"
        android:text="@string/_5"
        android:textColor="#000000"
        android:textSize="50sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"

        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="#FFCDD2"
        android:gravity="center"
        android:text="@string/con3_2"
        android:textColor="#000000"
        android:textSize="50sp"

        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"

        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="#C8E6C9"
        android:gravity="center"
        android:text="@string/_3"
        android:textSize="50sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"

        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="#F0F4C3"
        android:gravity="center"
        android:text="@string/_4"
        android:textSize="50sp"

        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"

        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="#3970FA"
        android:gravity="center"
        android:text="@string/_6"
        android:textSize="50sp"

        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView1"

        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintWidth_percent="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>